# passport-status-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  push_ntfy.py  pyproject.toml  pytest.ini  requirements.txt  sample.env  test_pydantic_v2.py
.github/workflows/: ci.yml
bot/: __init__.py  __main__.py  bot_instance.py  main.py
bot/commands/: admin.py  subscription.py  system.py  user.py
bot/controllers/: cabinet.py  message.py  start.py  subscriptions.py
bot/core/: api.py  cloudscraper.py  command_registry.py  config.py  constants.py  database.py  exceptions.py  logger.py  monitoring.py  notificator.py  notify_admin.py  playwright.py  proxy.py  scheduler.py  utils.py
bot/core/models/: application.py  push.py  request_log.py  user.py
bot/handlers/: cabinet.py  message.py  setup.py  start.py  subscriptions.py
bot/middlewares/: __init__.py  antiflood.py  debug.py  error_handler.py
bot/services/: __init__.py  user_service.py
core/: config.py  database.py
core/models/: push.py  user.py
scripts/: dev.py  run.sh
tests/: conftest.py  test_models.py  test_sanity.py
