[tool.poetry]
name = "mfa-passport-bot"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
beanie = "^1.23.6"
fake-headers = "^1.0.2"
cloudscraper = "^1.2.71"
aiogram = "2.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
